--- a/notebooks/02. Estructuras if y switch.ipynb
+++ b/notebooks/02. Estructuras if y switch.ipynb
@@ -21,7 +21,21 @@
    "id": "varying-palace",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "int a = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "int b = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "if (a > b) {\n",
+    "    System.out.println(\"Es mayor\");\n",
+    "} else if (a < b){\n",
+    "    System.out.println(\"Es menor\");\n",
+    "} else if (a == b) {\n",
+    "    System.out.println(\"Son iguales\");\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,7 +56,19 @@
    "id": "chicken-timer",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "int a = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "if (a == 0) {\n",
+    "    System.out.println(\"No es par ni impar\");\n",
+    "} else if (a % 2 == 0) {\n",
+    "    System.out.println(\"Es par\");\n",
+    "} else if (a % 2 == 1){\n",
+    "    System.out.println(\"Es impar\");\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,7 +89,19 @@
    "id": "front-campus",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "int a = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "if (a == 0) {\n",
+    "    System.out.println(\"No es positivo ni negativo\");\n",
+    "} else if (a < 0) {\n",
+    "    System.out.println(\"Es negativo\");\n",
+    "} else if (a > 0){\n",
+    "    System.out.println(\"Es positivo\");\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,7 +122,20 @@
    "id": "documentary-webcam",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "String a = scanner.nextLine();\n",
+    "\n",
+    "if (a.length() < 8) {\n",
+    "    System.out.println(\"Demasiado pequeño\");\n",
+    "} else if (a.length() > 8) {\n",
+    "    System.out.println(\"Demasiado grande\");\n",
+    "} else if (a.length() == 8) { \n",
+    "    System.out.println(\"Es válido\");\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,11 +157,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "weekly-incentive",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "7\n",
+      "\n",
+      "11\n",
+      "c es igual que a + b\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "int a = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "int b = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "if (a > b) {\n",
+    "    System.out.println(a+b);\n",
+    "} else if (a == b) {\n",
+    "    System.out.println(a-b);\n",
+    "} else if (a < b) {\n",
+    "    int c = scanner.nextInt();\n",
+    "    scanner.nextLine();\n",
+    "    if (c > a+b) {\n",
+    "        System.out.println(\"c es mayor que a + b\" );\n",
+    "    } else if (c < a+b) {\n",
+    "        System.out.println(\"c es menor que a + b\" );\n",
+    "    } else if (c == a+b) {\n",
+    "        System.out.println(\"c es igual que a + b\" );\n",
+    "    }\n",
+    "}\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +222,31 @@
    "id": "sharing-reservation",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "String operacion = scanner.nextLine();\n",
+    "\n",
+    "if(operacion.equals(\"+\")) {\n",
+    "    \n",
+    "    double a = scanner.nextDouble();\n",
+    "    scanner.nextLine();\n",
+    "    double b = scanner.nextDouble();\n",
+    "    scanner.nextLine();\n",
+    "    \n",
+    "        System.out.println(a+b);\n",
+    "    \n",
+    "} else if (operacion.equals(\"-\")) {\n",
+    "    \n",
+    "    int a = scanner.nextInt();\n",
+    "    scanner.nextLine();\n",
+    "    int b = scanner.nextInt();\n",
+    "    scanner.nextLine();\n",
+    "    \n",
+    "        System.out.println(a-b);\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
