--- a/notebooks/1. Variables y Scanner.ipynb
+++ b/notebooks/1. Variables y Scanner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fatty-sweet",
    "metadata": {},
    "outputs": [],
@@ -27,19 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "tender-dress",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "true\n"
+     ]
+    }
+   ],
    "source": [
-    "import java.util.Scanner;\n",
-    "Scanner scanner = new Scanner(System.in);\n",
     "int a = scanner.nextInt();\n",
     "scanner.nextLine();\n",
     "int b = scanner.nextInt();\n",
     "scanner.nextLine();\n",
-    "boolean c = a >= b;\n",
-    "System.out.println(c);"
+    "boolean mayor = a>b;\n",
+    "System.out.println(mayor);"
    ]
   },
   {
@@ -57,29 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "polyphonic-permit",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "true\n",
-      "false\n",
-      "true\n"
+     "ename": "EvalException",
+     "evalue": "null",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1m\u001b[31mjava.util.InputMismatchException: null\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.Scanner.throwFor(Scanner.java:939)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.Scanner.next(Scanner.java:1594)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat java.base/java.util.Scanner.nextBoolean(Scanner.java:1893)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat .(#14:1)\u001b[0m"
      ]
     }
    ],
    "source": [
-    "import java.util.Scanner;\n",
-    "Scanner scanner = new Scanner(System.in);\n",
     "boolean a = scanner.nextBoolean();\n",
     "scanner.nextLine();\n",
     "boolean b = scanner.nextBoolean();\n",
     "scanner.nextLine();\n",
     "boolean c = a || b;\n",
-    "System.out.println(c);"
+    "System.out.println(c);\n"
    ]
   },
   {
@@ -87,7 +97,7 @@
    "id": "civilian-walter",
    "metadata": {},
    "source": [
-    "## And\n",
+    "# And\n",
     "\n",
     "Implementa en la siguiente celda un programa que:\n",
     "- Pida al usuario una variable a de tipo booleana (scanner.nextBoolean()) \n",
@@ -97,23 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "banned-intention",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "true\n",
-      "false\n",
-      "false\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import java.util.Scanner;\n",
-    "Scanner scanner = new Scanner(System.in);\n",
     "boolean a = scanner.nextBoolean();\n",
     "scanner.nextLine();\n",
     "boolean b = scanner.nextBoolean();\n",
@@ -141,35 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "loaded-assist",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola\n",
-      "Adios\n",
-      "Hola, Adios\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import java.util.Scanner;\n",
-    "Scanner scanner = new Scanner(System.in);\n",
     "String saludo = scanner.nextLine();\n",
     "String despedida = scanner.nextLine();\n",
-    "System.out.println(saludo + \", \" + despedida);"
+    "System.out.print(saludo + \". \" + despedida);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "announced-navigation",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
