--- a/notebooks/03. Métodos.ipynb
+++ b/notebooks/03. Métodos.ipynb
@@ -20,11 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "interstate-blues",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "public void holaMundo() {\n",
+    "    String saludo = \"Hola mundo\";\n",
+    "    System.out.println(saludo);\n",
+    "}\n",
+    "\n",
+    "holaMundo();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,11 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "plastic-society",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, Nerea\n"
+     ]
+    }
+   ],
+   "source": [
+    "public void saludoPersonalizado(String person) {\n",
+    "    System.out.println(\"Hola, \" + person);\n",
+    "}\n",
+    "\n",
+    "saludoPersonalizado(\"Nerea\");"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,11 +113,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "headed-missouri",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "9\n",
+      "-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "public void restar() {\n",
+    "    int a = scanner.nextInt();\n",
+    "    scanner.nextLine();\n",
+    "    int b = scanner.nextInt();\n",
+    "    scanner.nextLine();\n",
+    "    \n",
+    "    System.out.println(a-b);\n",
+    "}\n",
+    "\n",
+    "restar();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,7 +175,11 @@
    "id": "infectious-monkey",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "public void sumar() {\n",
+    "    \n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,11 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "broad-fifth",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "public int sumar (int a, int b) {\n",
+    "    return a + b;\n",
+    "}\n",
+    "int sumar1 = sumar(3, 4);\n",
+    "int sumar2 = sumar (5, 7);\n",
+    "int sumarFinal = sumar (sumar1, sumar2);\n",
+    "\n",
+    "System.out.println(sumarFinal);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,11 +256,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "blond-reservation",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "public int resta(int a, int b) {\n",
+    "    return a - b;\n",
+    "} \n",
+    "int resta = resta(9,5);\n",
+    "\n",
+    "System.out.println(resta);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,11 +301,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "wired-folks",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mSystem.out.println(\u001b[0m\u001b[1m\u001b[30m\u001b[41ma\u001b[0m\u001b[1m\u001b[30m);\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable a\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "public double getDouble() {\n",
+    "    double a = scanner.nextDouble();\n",
+    "    scanner.nextLine();\n",
+    "\n",
+    "    return a;\n",
+    "}\n"
+   ]
   },
   {
    "cell_type": "markdown",
