Bucles del día 30/05

--- a/notebooks/04. Bucles.ipynb
+++ b/notebooks/04. Bucles.ipynb
@@ -22,7 +22,18 @@
    "id": "cellular-japan",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "int n = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "String b = scanner.nextLine();\n",
+    "\n",
+    "for(int i = 0; i < n; i++) {\n",
+    "    System.out.println(b);\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,7 +53,22 @@
    "id": "experienced-disney",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "int n = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "String mensaje = scanner.nextLine();\n",
+    "\n",
+    "public void holaMundo(String mensaje, int n) {\n",
+    "    for (int i = 0; i < n; i++) {\n",
+    "        System.out.println(mensaje);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "holaMundo(mensaje, n);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,7 +88,25 @@
    "id": "million-layout",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "int a = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "int b = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "\n",
+    "public void getNums(int a, int b) {\n",
+    "    \n",
+    "    for(int i = a; i <= b; i++) {\n",
+    "        System.out.println(i);\n",
+    "        if()\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "getNums(a, b);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +126,16 @@
    "id": "answering-demonstration",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "int num = 4;\n",
+    "int sumatorio = 0;\n",
+    "\n",
+    "for(int i = 0; i <= num; i++) {\n",
+    "    sumatorio = sumatorio + i;\n",
+    "} \n",
+    "\n",
+    "System.out.println(\"El sumatorio de \" + num + \" es \" + sumatorio);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,7 +155,19 @@
    "id": "young-means",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "int n1 = 1900;\n",
+    "int n2 = 2022;\n",
+    "\n",
+    "for (int i = n1; i <= n2; i++) {\n",
+    "    if (i % 4 == 0) {\n",
+    "        if (i % 100 != 0) {\n",
+    "         System.out.println(i);   \n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +185,34 @@
    "id": "fantastic-salvation",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "\n",
+    "\n",
+    "public void pideNum () {\n",
+    "    System.out.println(\"¿Cuántos números va a introducir?\");\n",
+    "    int a = scanner.nextInt();\n",
+    "    scanner.nextLine();\n",
+    "\n",
+    "    int contador = 0;\n",
+    "    \n",
+    "    for(int i = 0; i < a; i++) {\n",
+    "        int n = scanner.nextInt();\n",
+    "        scanner.nextLine();\n",
+    "        \n",
+    "        if (n < 0) {\n",
+    "            contador++;\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "            System.out.println(\"Números negativos: \" + contador );\n",
+    "\n",
+    "}\n",
+    "\n",
+    "pideNum();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,11 +226,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "speaking-period",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Cuántos números va a introducir?\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "El máximo es... 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "\n",
+    "public void pideNum () {\n",
+    "    System.out.println(\"¿Cuántos números va a introducir?\");\n",
+    "    int a = scanner.nextInt();\n",
+    "    scanner.nextLine();\n",
+    "    \n",
+    "        int max = 0; \n",
+    "    \n",
+    "    for(int i = 0; i < a; i++) {\n",
+    "        int n = scanner.nextInt();\n",
+    "        scanner.nextLine();\n",
+    "        \n",
+    "\n",
+    "    \n",
+    "        if (n > max) {\n",
+    "            max = n;\n",
+    "        }\n",
+    "        \n",
+    "    }\n",
+    "    \n",
+    "    System.out.println(\"El máximo es... \" + max);\n",
+    "}\n",
+    "\n",
+    "pideNum();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,7 +290,15 @@
    "id": "generic-athens",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "public void pideArray(double [] array) {\n",
+    "    \n",
+    "    for\n",
+    "} "
+   ]
   },
   {
    "cell_type": "markdown",
