--- a/notebooks/06. Bucles anidados.ipynb
+++ b/notebooks/06. Bucles anidados.ipynb
@@ -28,11 +28,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "oriented-kingston",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "\n",
+      "1234\n",
+      "2345\n",
+      "3456\n",
+      "4567"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "int n = scanner.nextInt();\n",
+    "scanner.nextLine();\n",
+    "\n",
+    "    public static void numPosi ( int n){\n",
+    "        for (int i = 1; i <= n; i++) {\n",
+    "            System.out.println();\n",
+    "            for (int j = 0+i; j < n+i ; j++) {\n",
+    "                System.out.print(j);\n",
+    "            }\n",
+    "\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    " numPosi(n);\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
