--- a/notebooks/05. Arrays.ipynb
+++ b/notebooks/05. Arrays.ipynb
@@ -17,11 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "occupational-biotechnology",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    for(int i = 0; i =< nums\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m; i++) {\u001b[0m",
+      "\u001b[1m\u001b[31m> expected\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "public void arrayInt(int [] array) {\n",
+    "    int [] nums = new int [5];\n",
+    "    for(int i = 0; i =< nums; i++) {\n",
+    "        nums[i] = scanner.nextInt();\n",
+    "        scanner.nextLine();\n",
+    "    }\n",
+    "} \n",
+    "    System.out.println([4]);\n",
+    "    System.out.println(nums);\n",
+    "\n",
+    "arrayInt();"
+   ]
   },
   {
    "cell_type": "markdown",
