--- a/notebooks/06. Bucles anidados.ipynb
+++ b/notebooks/06. Bucles anidados.ipynb
@@ -92,11 +92,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "false-parameter",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1\n",
+      "22\n",
+      "333\n",
+      "4444"
+     ]
+    }
+   ],
+   "source": [
+    "public static void numPosi (int n){\n",
+    "        for (int i = 1; i <= n; i++) {\n",
+    "            System.out.println();\n",
+    "            for (int j = 1; j <= i ; j++) {\n",
+    "                System.out.print(i);\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "        }\n",
+    "    }\n",
+    "numPosi(4);"
+   ]
   },
   {
    "attachments": {
