--- a/notebooks/05. Arrays.ipynb
+++ b/notebooks/05. Arrays.ipynb
@@ -17,18 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "occupational-biotechnology",
    "metadata": {},
    "outputs": [
     {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    for(int i = 0; i =< nums\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m; i++) {\u001b[0m",
-      "\u001b[1m\u001b[31m> expected\u001b[0m",
-      ""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "5\n"
      ]
     }
    ],
@@ -36,15 +39,17 @@
     "import java.util.Scanner;\n",
     "Scanner scanner = new Scanner(System.in);\n",
     "\n",
-    "public void arrayInt(int [] array) {\n",
+    "public void arrayInt() {\n",
     "    int [] nums = new int [5];\n",
-    "    for(int i = 0; i =< nums; i++) {\n",
+    "    for(int i = 0; i < nums.length; i++) {\n",
     "        nums[i] = scanner.nextInt();\n",
     "        scanner.nextLine();\n",
+    "       \n",
     "    }\n",
+    "        System.out.println(nums[nums.length-1]);\n",
+    "  System.out.println(nums.length);\n",
     "} \n",
-    "    System.out.println([4]);\n",
-    "    System.out.println(nums);\n",
+    "\n",
     "\n",
     "arrayInt();"
    ]
